<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>org.texttechnologylab</groupId>
    <artifactId>heideltimex</artifactId>
    <version>4.0.4</version>

    <name>HeidelTime</name>
    <description>HeidelTime is a multilingual cross-domain temporal tagger that extracts temporal expressions from
        documents and normalizes them according to the TIMEX3 annotation standard.
    </description>
    <url>https://github.com/HeidelTime/heideltime/</url>

    <licenses>
        <license>
            <name>GNU General Public License (GPL)</name>
            <url>http://www.gnu.org/licenses/gpl.txt</url>
        </license>
    </licenses>

    <issueManagement>
        <url>https://github.com/HeidelTime/heideltime/issues</url>
        <system>GitHub</system>
    </issueManagement>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    </properties>

    <developers>
        <developer>
            <id>JannikStroetgen</id>
            <name>Jannik Strötgen</name>
            <email>jannik.stroetgen@mpi-inf.mpg.de</email>
            <url>http://people.mpi-inf.mpg.de/~jstroetge/</url>
        </developer>
        <developer>
            <id>jzell</id>
            <name>Julian Zell</name>
            <email>zell@informatik.uni-heidelberg.de</email>
            <url>https://github.com/jzell</url>
        </developer>
        <developer>
            <id>aluecking</id>
            <name>Julian Zell</name>
            <email>luecking@em.uni-frankfurt.de</email>
            <url>https://github.com/aluecking</url>
        </developer>
        <developer>
            <id>manu-schaaf</id>
            <name>Manuel Schaaf</name>
            <email>manuel.schaaf@em.uni-frankfurt.de</email>
            <url>https://github.com/manu-schaaf</url>
        </developer>
    </developers>

    <scm>
        <url>https://github.com/HeidelTime/heideltime</url>
        <connection>scm:git:git@github.com:HeidelTime/heideltime.git</connection>
        <developerConnection>scm:git:git@github.com:HeidelTime/heideltime.git</developerConnection>
    </scm>
    <profiles>
        <profile>
            <id>release</id>
            <activation>
                <property>
                    <name>release</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.maven.plugins</groupId>
                        <artifactId>maven-javadoc-plugin</artifactId>
                        <version>3.10.1</version>
                        <executions>
                            <execution>
                                <id>attach-javadocs</id>
                                <goals>
                                    <goal>jar</goal>
                                </goals>
                                <configuration>
                                    <additionalOptions>-Xdoclint:none</additionalOptions>
                                </configuration>
                            </execution>
                        </executions>
                    </plugin>
                </plugins>
            </build>
        </profile>
        <profile>
            <id>jcasgen</id>
            <activation>
                <property>
                    <name>jcasgen</name>
                    <value>true</value>
                </property>
            </activation>
            <build>
                <plugins>
                    <plugin>
                        <groupId>org.apache.uima</groupId>
                        <artifactId>jcasgen-maven-plugin</artifactId>
                        <version>3.5.0</version>
                        <configuration>
                            <limitToProject>true</limitToProject>
                            <typeSystemIncludes>
                                <include>desc/type/HeidelTime_TypeSystem.xml</include>
                            </typeSystemIncludes>
                            <outputDirectory>src/main/java</outputDirectory>
                        </configuration>
                    </plugin>
                </plugins>
            </build>
        </profile>
    </profiles>

    <build>
        <sourceDirectory>src/main/java</sourceDirectory>
        <outputDirectory>${basedir}/target/class</outputDirectory>
        <resources>
            <resource>
                <directory>${basedir}</directory>
                <includes>
                    <include>desc/**/*.xml</include>
                    <include>META-INF/org.apache.uima.fit/types.txt</include>
                </includes>
            </resource>
            <resource>
                <directory>src/main/resources/</directory>
                <includes>
                    <include>**/*.txt</include>
                </includes>
            </resource>
        </resources>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-source-plugin</artifactId>
                <version>3.3.1</version>
                <configuration>
                    <excludeResources>true</excludeResources>
                </configuration>
                <executions>
                    <execution>
                        <id>attach-sources</id>
                        <goals>
                            <goal>jar-no-fork</goal>
                        </goals>
                    </execution>
                </executions>
            </plugin>
            <plugin>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.5.3</version>
            </plugin>
            <plugin>
                <artifactId>maven-failsafe-plugin</artifactId>
                <version>3.5.3</version>
            </plugin>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <configuration>
                    <source>21</source>
                    <target>21</target>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <distributionManagement>
        <repository>
            <id>github</id>
            <name>GitHub Packages</name>
            <url>https://maven.pkg.github.com/texttechnologylab/heideltime</url>
        </repository>
    </distributionManagement>

    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.junit</groupId>
                <artifactId>junit-bom</artifactId>
                <version>5.13.2</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>
        <dependency>
            <groupId>org.apache.uima</groupId>
            <artifactId>uimaj-core</artifactId>
            <version>3.5.0</version>
        </dependency>
        <dependency>
            <groupId>org.apache.uima</groupId>
            <artifactId>uimafit-core</artifactId>
            <version>3.5.0</version>
        </dependency>

        <dependency>
            <groupId>org.dkpro.core</groupId>
            <artifactId>dkpro-core-api-segmentation-asl</artifactId>
            <version>2.5.0</version>
        </dependency>
        <dependency>
            <groupId>org.dkpro.core</groupId>
            <artifactId>dkpro-core-api-lexmorph-asl</artifactId>
            <version>2.5.0</version>
        </dependency>

        <dependency>
            <groupId>org.junit.jupiter</groupId>
            <artifactId>junit-jupiter</artifactId>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.7.25</version>
            <scope>test</scope>
        </dependency>
    </dependencies>
</project>
